fix css z-index issue for media option ul

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -1351,7 +1351,7 @@ button.rtp-lb-close {
       position:absolute;
       right:0;
       width: 170px;
-      z-index: 9;
+      z-index: 30;
       padding: 10px 5px;
       background-color: #37454D;
       margin-top: 12px;
